<resources>
    <string name="app_name">AndroidExSample</string>

    <string name="title_home">Home</string>
    <string name="title_permission">Permission</string>
    <string name="title_storage_inter">Storage Inter</string>
    <string name="title_storage_exter">Storage Exter</string>
    <string name="title_storage_share">Storage Share</string>
    <string name="title_notifications">Notifications</string>


    <string-array name="req_permission">
        <item>사진/미디어/저장공간</item>
        <item>마이크</item>
        <item>기기 및 앱 기록</item>
        <item>다른 앱 위에 그리기</item>
        <item>사용 정보 접근 및 접근성</item>
        <item>알림</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>