<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_permission"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_permission" />

    <item
        android:id="@+id/navigation_storage_inter"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_storage_inter" />

    <item
        android:id="@+id/navigation_storage_exter"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_storage_exter" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>