<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ulling.androidexsample.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_permission"
        android:name="com.ulling.androidexsample.ui.permission.PermissionFragment"
        android:label="@string/title_permission"
        tools:layout="@layout/fragment_permission" />

    <fragment
        android:id="@+id/navigation_storage_inter"
        android:name="com.ulling.androidexsample.ui.storage.inter.StorageInterFragment"
        android:label="@string/title_storage"
        tools:layout="@layout/fragment_storage_inter" />

    <fragment
        android:id="@+id/navigation_storage_exter"
        android:name="com.ulling.androidexsample.ui.storage.exter.StorageExterFragment"
        android:label="@string/title_storage"
        tools:layout="@layout/fragment_storage_exter" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ulling.androidexsample.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>